Added FindBugs to the configuration.
git-svn-id: http://ikube.googlecode.com/svn/trunk@507 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/pom.xml
+++ b/pom.xml
@@ -60,64 +60,8 @@
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-pmd-plugin</artifactId>
-				<version>2.5</version>
-				<configuration>
-					<linkXref>true</linkXref>
-					<source>${targetJdk}</source>
-					<execution>
-						<goals>
-							<goal>package</goal>
-							<goal>install</goal>
-							<goal>site</goal>
-						</goals>
-					</execution>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>jdepend-maven-plugin</artifactId>
-				<version>2.0-beta-2</version>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-install-plugin</artifactId>
 				<version>2.3</version>
-				<executions>
-					<execution>
-						<id>install-canyon</id>
-						<phase>compile</phase>
-						<configuration>
-							<groupId>canyon</groupId>
-							<artifactId>canyon</artifactId>
-							<version>0.9.8</version>
-							<packaging>jar</packaging>
-							<file>libs/canyon-0.9.8.jar</file>
-						</configuration>
-					</execution>
-					<execution>
-						<id>install-db2-driver</id>
-						<phase>compile</phase>
-						<configuration>
-							<groupId>com.ibm.db2.jcc</groupId>
-							<artifactId>db2jcc4</artifactId>
-							<version>9.7.2</version>
-							<packaging>jar</packaging>
-							<file>libs/db2jcc4-9.7.2.jar</file>
-						</configuration>
-					</execution>
-					<execution>
-						<id>install-db2-driver-license</id>
-						<phase>compile</phase>
-						<configuration>
-							<groupId>com.ibm.db2.jcc</groupId>
-							<artifactId>db2jcc_license_cu</artifactId>
-							<version>9.7.2</version>
-							<packaging>jar</packaging>
-							<file>libs/db2jcc_license_cu-9.7.2.jar</file>
-						</configuration>
-					</execution>
-				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
@@ -144,6 +88,166 @@
 						<version>2.1.0</version>
 					</dependency>
 				</dependencies>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>findbugs-maven-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<findbugsXmlOutput>true</findbugsXmlOutput>
+					<effort>Max</effort>
+					<visitors>
+						FindDeadLocalStores,
+						UnreadFields,
+						AppendingToAnObjectOutputStream,
+						BadAppletConstructor,
+						BadlyOverriddenAdapter,
+						BadResultSetAccess,
+						BadSyntaxForRegularExpression,
+						BadUseOfReturnValue,
+						BooleanReturnNull,
+						BuildInterproceduralCallGraph,
+						BuildObligationPolicyDatabase,
+						CalledMethods,
+						CallToUnsupportedMethod,
+						CheckCalls,
+						CheckExpectedWarnings,
+						CheckImmutableAnnotation,
+						CheckTypeQualifiers,
+						CloneIdiom,
+						ComparatorIdiom,
+						ConfusedInheritance,
+						ConfusionBetweenInheritedAndOuterMethod,
+						CrossSiteScripting,
+						DoInsideDoPrivileged, 
+						DontCatchIllegalMonitorStateException,
+						DontIgnoreResultOfPutIfAbsent,
+						DontUseEnum,
+						DroppedException,
+						DumbMethodInvocations,
+						DumbMethods,
+						DuplicateBranches,
+						EmptyZipFileEntry,	 
+						EqStringTest,
+						EqualsOperandShouldHaveClassCompatibleWithThis,
+						FieldItemSummary,
+						FinalizerNullsFields,
+						FindBadCast2,
+						FindBadEqualsImplementation,
+						FindBadForLoop,
+						FindBugsSummaryStats,
+						FindCircularDependencies,
+						FindDeadLocalStores,
+						FindDoubleCheck,
+						FindEmptySynchronizedBlock,
+						FindFieldSelfAssignment,
+						FindFinalizeInvocations,
+						FindFloatEquality,
+						FindFloatMath,
+						FindHEmismatch,
+						FindInconsistentSync2,
+						FindJSR166LockMonitorenter,
+						FindLocalSelfAssignment2,
+						FindMaskedFields,
+						FindMismatchedWaitOrNotify,
+						FindNakedNotify,
+						FindNonSerializableStoreIntoSession,
+						FindNonSerializableValuePassedToWriteObject,
+						FindNonShortCircuit,
+						FindNullDeref,
+						FindNullDerefsInvolvingNonShortCircuitEvaluation,
+						FindOpenStream,
+						FindPuzzlers,
+						FindRefComparison,
+						FindReturnRef,
+						FindRunInvocations,
+						FindSelfComparison,
+						FindSelfComparison2,
+						FindSleepWithLockHeld,
+						FindSpinLoop,
+						FindSqlInjection,
+						FindTwoLockWait,
+						FindUncalledPrivateMethods,
+						FindUnconditionalWait,
+						FindUninitializedGet,
+						FindUnrelatedTypesInGenericContainer,
+						FindUnreleasedLock,
+						FindUnsatisfiedObligation,
+						FindUnsyncGet,
+						FindUselessControlFlow,
+						FormatStringChecker,
+						HugeSharedStringConstants,
+						IDivResultCastToDouble,
+						IncompatMask,
+						InconsistentAnnotations,
+						InefficientMemberAccess,
+						InefficientToArray,
+						InfiniteLoop,
+						InfiniteRecursiveLoop,
+						InheritanceUnsafeGetResource,
+						InitializationChain,
+						InstantiateStaticClass,
+						InvalidJUnitTest,
+						IteratorIdioms,
+						LazyInit,
+						LoadOfKnownNullValue,
+						LockedFields,
+						LostLoggerDueToWeakReference,
+						MethodReturnCheck,
+						Methods,
+						MultithreadedInstanceAccess,
+						MutableLock,
+						MutableStaticFields,
+						Naming,
+						Noise,
+						NoiseNullDeref,
+						NoteAnnotationRetention,
+						NoteCheckReturnValue,
+						NoteCheckReturnValueAnnotations,
+						NoteDirectlyRelevantTypeQualifiers,
+						NoteJCIPAnnotation,
+						NoteNonnullReturnValues,
+						NoteSuppressedWarnings,
+						NoteUnconditionalParamDerefs,
+						NumberConstructor,
+						OverridingEqualsNotSymmetrical,
+						PreferZeroLengthArrays,
+						PublicSemaphores,
+						QuestionableBooleanAssignment,
+						ReadOfInstanceFieldInMethodInvokedByConstructorInSuperclass,
+						ReadReturnShouldBeChecked,
+						RedundantInterfaces,
+						ReflectiveClasses,
+						RepeatedConditionals,
+						ResolveAllReferences,
+						RuntimeExceptionCapture,
+						SerializableIdiom,
+						StartInConstructor,
+						StaticCalendarDetector,
+						StringConcatenation,
+						SuperfluousInstanceOf,
+						SuspiciousThreadInterrupted,
+						SwitchFallthrough,
+						SynchronizationOnSharedBuiltinConstant,
+						SynchronizeAndNullCheckField,
+						SynchronizeOnClassLiteralNotGetClass,
+						SynchronizingOnContentsOfFieldToProtectField,
+						TestDataflowAnalysis,
+						TestingGround,
+						TrainFieldStoreTypes,
+						TrainUnconditionalDerefParams,
+						UncallableMethodOfAnonymousClass,
+						UnnecessaryMath,
+						UnreadFields,
+						URLProblems,
+						UselessSubclassMethod,
+						UseObjectEquals,
+						VarArgsProblems,
+						VolatileUsage,
+						WaitInLoop,
+						WrongMapIterator
+					</visitors>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
