Added FindBugs to the reporting tags.
git-svn-id: http://ikube.googlecode.com/svn/trunk@508 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,15 @@
 	</modules>
 
 	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>findbugs-maven-plugin</artifactId>
+					<version>2.3.2</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -834,19 +843,163 @@
 				<version>2.0-beta-1</version>
 			</plugin>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-pmd-plugin</artifactId>
-				<version>2.5</version>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>findbugs-maven-plugin</artifactId>
+				<version>2.3.2</version>
 				<configuration>
-					<linkXref>true</linkXref>
-					<targetJdk>${targetJdk}</targetJdk>
-					<rulesets>
-						<!-- Two rule sets that come bundled with PMD -->
-						<ruleset>rulesets/braces.xml</ruleset>
-						<ruleset>rulesets/naming.xml</ruleset>
-						<!-- Custom local file system rule set -->
-						<ruleset>rulesets/basic.xml</ruleset>
-					</rulesets>
+					<xmlOutput>true</xmlOutput>
+					<findbugsXmlOutput>true</findbugsXmlOutput>
+					<visitors>
+						FindDeadLocalStores,
+						UnreadFields,
+						AppendingToAnObjectOutputStream,
+						BadAppletConstructor,
+						BadlyOverriddenAdapter,
+						BadResultSetAccess,
+						BadSyntaxForRegularExpression,
+						BadUseOfReturnValue,
+						BooleanReturnNull,
+						BuildInterproceduralCallGraph,
+						BuildObligationPolicyDatabase,
+						CalledMethods,
+						CallToUnsupportedMethod,
+						CheckCalls,
+						CheckExpectedWarnings,
+						CheckImmutableAnnotation,
+						CheckTypeQualifiers,
+						CloneIdiom,
+						ComparatorIdiom,
+						ConfusedInheritance,
+						ConfusionBetweenInheritedAndOuterMethod,
+						CrossSiteScripting,
+						DoInsideDoPrivileged, 
+						DontCatchIllegalMonitorStateException,
+						DontIgnoreResultOfPutIfAbsent,
+						DontUseEnum,
+						DroppedException,
+						DumbMethodInvocations,
+						DumbMethods,
+						DuplicateBranches,
+						EmptyZipFileEntry,	 
+						EqStringTest,
+						EqualsOperandShouldHaveClassCompatibleWithThis,
+						FieldItemSummary,
+						FinalizerNullsFields,
+						FindBadCast2,
+						FindBadEqualsImplementation,
+						FindBadForLoop,
+						FindBugsSummaryStats,
+						FindCircularDependencies,
+						FindDeadLocalStores,
+						FindDoubleCheck,
+						FindEmptySynchronizedBlock,
+						FindFieldSelfAssignment,
+						FindFinalizeInvocations,
+						FindFloatEquality,
+						FindFloatMath,
+						FindHEmismatch,
+						FindInconsistentSync2,
+						FindJSR166LockMonitorenter,
+						FindLocalSelfAssignment2,
+						FindMaskedFields,
+						FindMismatchedWaitOrNotify,
+						FindNakedNotify,
+						FindNonSerializableStoreIntoSession,
+						FindNonSerializableValuePassedToWriteObject,
+						FindNonShortCircuit,
+						FindNullDeref,
+						FindNullDerefsInvolvingNonShortCircuitEvaluation,
+						FindOpenStream,
+						FindPuzzlers,
+						FindRefComparison,
+						FindReturnRef,
+						FindRunInvocations,
+						FindSelfComparison,
+						FindSelfComparison2,
+						FindSleepWithLockHeld,
+						FindSpinLoop,
+						FindSqlInjection,
+						FindTwoLockWait,
+						FindUncalledPrivateMethods,
+						FindUnconditionalWait,
+						FindUninitializedGet,
+						FindUnrelatedTypesInGenericContainer,
+						FindUnreleasedLock,
+						FindUnsatisfiedObligation,
+						FindUnsyncGet,
+						FindUselessControlFlow,
+						FormatStringChecker,
+						HugeSharedStringConstants,
+						IDivResultCastToDouble,
+						IncompatMask,
+						InconsistentAnnotations,
+						InefficientMemberAccess,
+						InefficientToArray,
+						InfiniteLoop,
+						InfiniteRecursiveLoop,
+						InheritanceUnsafeGetResource,
+						InitializationChain,
+						InstantiateStaticClass,
+						InvalidJUnitTest,
+						IteratorIdioms,
+						LazyInit,
+						LoadOfKnownNullValue,
+						LockedFields,
+						LostLoggerDueToWeakReference,
+						MethodReturnCheck,
+						Methods,
+						MultithreadedInstanceAccess,
+						MutableLock,
+						MutableStaticFields,
+						Naming,
+						Noise,
+						NoiseNullDeref,
+						NoteAnnotationRetention,
+						NoteCheckReturnValue,
+						NoteCheckReturnValueAnnotations,
+						NoteDirectlyRelevantTypeQualifiers,
+						NoteJCIPAnnotation,
+						NoteNonnullReturnValues,
+						NoteSuppressedWarnings,
+						NoteUnconditionalParamDerefs,
+						NumberConstructor,
+						OverridingEqualsNotSymmetrical,
+						PreferZeroLengthArrays,
+						PublicSemaphores,
+						QuestionableBooleanAssignment,
+						ReadOfInstanceFieldInMethodInvokedByConstructorInSuperclass,
+						ReadReturnShouldBeChecked,
+						RedundantInterfaces,
+						ReflectiveClasses,
+						RepeatedConditionals,
+						ResolveAllReferences,
+						RuntimeExceptionCapture,
+						SerializableIdiom,
+						StartInConstructor,
+						StaticCalendarDetector,
+						StringConcatenation,
+						SuperfluousInstanceOf,
+						SuspiciousThreadInterrupted,
+						SwitchFallthrough,
+						SynchronizationOnSharedBuiltinConstant,
+						SynchronizeAndNullCheckField,
+						SynchronizeOnClassLiteralNotGetClass,
+						SynchronizingOnContentsOfFieldToProtectField,
+						TestDataflowAnalysis,
+						TestingGround,
+						TrainFieldStoreTypes,
+						TrainUnconditionalDerefParams,
+						UncallableMethodOfAnonymousClass,
+						UnnecessaryMath,
+						UnreadFields,
+						URLProblems,
+						UselessSubclassMethod,
+						UseObjectEquals,
+						VarArgsProblems,
+						VolatileUsage,
+						WaitInLoop,
+						WrongMapIterator
+					</visitors>
 				</configuration>
 			</plugin>
 		</plugins>
