--- a/pom.xml
+++ b/pom.xml
@@ -849,6 +849,7 @@
 				<configuration>
 					<xmlOutput>true</xmlOutput>
 					<findbugsXmlOutput>true</findbugsXmlOutput>
+					<findbugsXmlWithMessages>true</findbugsXmlWithMessages>
 					<visitors>
 						FindDeadLocalStores,
 						UnreadFields,
