Added the start cluster build to the war pom.
git-svn-id: http://ikube.googlecode.com/svn/trunk@511 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/war/build.properties
+++ b/code/war/build.properties
@@ -5,8 +5,7 @@ ikube.war=ikube.war
 
 sleep=30
 
-target.directory=code/war/target
-core.target.directory=code/core/target
+target.directory=target
 
 cluster.directory=D:/cluster
 indexes.directory=${cluster.directory}/indexes
