Moved the spelling checker to the core. Added the spelling checking to the results statistics map at the end of the results.
git-svn-id: http://ikube.googlecode.com/svn/trunk@512 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/common/spring.properties
+++ b/code/core/src/main/resources/META-INF/common/spring.properties
@@ -4,6 +4,8 @@
 delay=60000
 # The period between notifications for timed tasks
 period=60000
+# The maximum age of the GeoSpatial index
+max.age.geospatial=600
 
 # These parameters are for the Ikube documentation index
 ikube.url=http://localhost/ikube/index.html
