--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,8 @@
 		<write.classes>-Dwrite.classes=true</write.classes>
 		<clean.classes>-Dclean.classes=true</clean.classes>
 		<included.packages>-Dincluded.packages=ikube</included.packages>
-		<excluded.packages>-Dexcluded.packages=model:Mock:Test:jpa</excluded.packages>
-		<included.adapters>-Dincluded.adapters=coverage:complexity:dependency:jaxws</included.adapters>
+		<excluded.packages>-Dexcluded.packages=model:Mock:Test:jpa:jaxws</excluded.packages>
+		<included.adapters>-Dincluded.adapters=coverage:complexity:dependency</included.adapters>
 
 		<war.base.root>code/war/target/ikube</war.base.root>
 	</properties>
