--- a/code/core/src/main/resources/META-INF/common/spring.properties
+++ b/code/core/src/main/resources/META-INF/common/spring.properties
@@ -5,7 +5,7 @@ delay=60000
 # The period between notifications for timed tasks
 period=60000
 # The maximum age of the GeoSpatial index
-max.age.geospatial=600
+max.age.geospatial=120
 
 # These parameters are for the Ikube documentation index
 ikube.url=http://localhost/ikube/index.html
@@ -21,18 +21,18 @@ h2.jdbc.password=
 h2.jdbc.url=jdbc:h2:file:ikube
 h2.jdbc.driver=org.h2.Driver
 
-ikube.dataSource=nonXaDataSourceH2
-ikube.persistenceUnit=IkubePersistenceUnitH2
-ikube.dataSourceType=H2
-ikube.jdbc.userid=sa
-ikube.jdbc.password=
-ikube.jdbc.url=jdbc:h2:file:ikube
-ikube.jdbc.driver=org.h2.Driver
+# ikube.dataSource=nonXaDataSourceH2
+# ikube.persistenceUnit=IkubePersistenceUnitH2
+# ikube.dataSourceType=H2
+# ikube.jdbc.userid=sa
+# ikube.jdbc.password=
+# ikube.jdbc.url=jdbc:h2:file:ikube
+# ikube.jdbc.driver=org.h2.Driver
 
-# ikube.dataSource=nonXaDataSourceDb2
-# ikube.persistenceUnit=IkubePersistenceUnitDb2
-# ikube.dataSourceType=DB2
-# ikube.jdbc.userid=db2admin
-# ikube.jdbc.password=db2admin
-# ikube.jdbc.url=jdbc:db2://ikube:50000/ikube
-# ikube.jdbc.driver=com.ibm.db2.jcc.DB2Driver
+ikube.dataSource=nonXaDataSourceDb2
+ikube.persistenceUnit=IkubePersistenceUnitDb2
+ikube.dataSourceType=DB2
+ikube.jdbc.userid=db2admin
+ikube.jdbc.password=db2admin
+ikube.jdbc.url=jdbc:db2://ikube:50000/ikube
+ikube.jdbc.driver=com.ibm.db2.jcc.DB2Driver
