Fixed some FindBugs violations.
git-svn-id: http://ikube.googlecode.com/svn/trunk@517 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/jndi.properties
+++ b/code/core/src/main/resources/jndi.properties
@@ -1,5 +1,5 @@
 # java.naming.factory.initial=com.sun.jndi.rmi.registry.RegistryContextFactory
 org.osjava.sj.jndi.shared=true
 # java.naming.factory.initial=org.osjava.sj.MemoryContextFactory
-java.naming.factory.initial=ikube.toolkit.InitialContextFactory
+java.naming.factory.initial=ikube.toolkit.InitialContextFactoryImpl
 org.osjava.sj.root=jndi
