--- a/code/core/pom.xml
+++ b/code/core/pom.xml
@@ -8,18 +8,18 @@
 	<groupId>ikube</groupId>
 	<artifactId>ikube-core</artifactId>
 	<packaging>jar</packaging>
-	<version>1.8.0</version>
+	<version>2.0.0</version>
 
 	<parent>
 		<groupId>ikube</groupId>
 		<artifactId>ikube</artifactId>
-		<version>1.8.0</version>
+		<version>2.0.0</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
 	<properties>
 		<main.class>ikube.Ikube</main.class>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
 	</properties>
 
 	<build>
