Added the integration test back to the configuration. Updated some classes and tests.
git-svn-id: http://ikube.googlecode.com/svn/trunk@521 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/client/spring.properties
+++ b/code/core/src/main/resources/META-INF/client/spring.properties
@@ -35,11 +35,16 @@ oracle.jdbc.url=jdbc:oracle:thin:@//ikube:1521/XE
 oracle.jdbc.driver=oracle.jdbc.driver.OracleDriver
 
 #General JDBC settings
-jdbc.minPoolSize=5
-jdbc.maxPoolSize=25
+jdbc.minPoolSize=10
+jdbc.maxPoolSize=50
 jdbc.maxStatements=1000
-jdbc.checkOutTimeout=360000000
-jdbc.numHelperThreads=5
+jdbc.checkOutTimeout=10000
+jdbc.numHelperThreads=25
+jdbc.breakAfterAcquireFailure=true
+jdbc.debugUnreturnedConnectionStackTraces=true
+jdbc.testConnectionOnCheckin=true
+jdbc.testConnectionOnCheckout=true
+jdbc.unreturnedConnectionTimeout=1200
 
 # The number of threads for each indexing component/connector
 table.handler.threads=3
