--- a/code/core/src/main/resources/META-INF/log4j.properties
+++ b/code/core/src/main/resources/META-INF/log4j.properties
@@ -1,22 +1,21 @@
 # Root Logger
-log4j.rootLogger=INFO, ikube, file
-log4j.rootCategory=INFO, ikube
+log4j.rootLogger=INFO, console, file
+log4j.rootCategory=INFO, console
 
 # ikube application file logging
 log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.file.Threshold=DEBUG
 log4j.appender.file.File=ikube.log
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
-# log4j.appender.ikube.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-5p %C{1}.%M(%L) - %m%n
-log4j.appender.ikube.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-5p %C{1}.%M(%L) - %m%n
+log4j.appender.file.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-5p %C{1}.%M(%L) - %m%n
 log4j.appender.file.Append=false
 
 # ikube application console logging
-log4j.appender.ikube=org.apache.log4j.ConsoleAppender
-log4j.appender.ikube.Threshold=DEBUG
-log4j.appender.ikube.ImmediateFlush=true
-log4j.appender.ikube.layout=org.apache.log4j.PatternLayout
-# log4j.appender.ikube.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-5p %C{1}.%M(%L) - %m%n
+log4j.appender.console=org.apache.log4j.ConsoleAppender
+log4j.appender.console.Threshold=DEBUG
+log4j.appender.console.ImmediateFlush=true
+log4j.appender.console.layout=org.apache.log4j.PatternLayout
+log4j.appender.console.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-5p %C{1}.%M(%L) - %m%n
 
 # set the categories
 log4j.category.net=WARN
