Final integration test configuration and documentation, making ready for the 2.0.0 release.
git-svn-id: http://ikube.googlecode.com/svn/trunk@523 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/war/build.properties
+++ b/code/war/build.properties
@@ -24,3 +24,5 @@ tomcat.3.bin=${tomcat.3}/bin
 
 jenkins.home=D:/apache-tomcat-6.0.26
 jenkins.bin=${jenkins.home}/bin
+
+configuration.directory=./target/configuration
