--- a/code/core/src/main/resources/META-INF/common/spring.properties
+++ b/code/core/src/main/resources/META-INF/common/spring.properties
@@ -5,7 +5,7 @@ delay=60000
 # The period between notifications for timed tasks
 period=60000
 # The maximum age of the GeoSpatial index
-max.age.geospatial=120
+max.age.geospatial=6000
 
 # These parameters are for the Ikube documentation index
 ikube.url=http://localhost/ikube/index.html
@@ -16,10 +16,29 @@ ikube.google.code=http://code.google.com/p/ikube/
 
 not.stored=false
 
+# The H2 datasource credentials
 h2.jdbc.userid=sa
 h2.jdbc.password=
 h2.jdbc.url=jdbc:h2:file:ikube
 h2.jdbc.driver=org.h2.Driver
+
+# The DB2 datasource credentials
+db2.jdbc.userid=db2admin
+db2.jdbc.password=db2admin
+db2.jdbc.url=jdbc:db2://ikube:50000/ikube
+db2.jdbc.driver=com.ibm.db2.jcc.DB2Driver
+
+#General JDBC settings
+jdbc.minPoolSize=5
+jdbc.maxPoolSize=10
+jdbc.maxStatements=1000
+jdbc.checkOutTimeout=10000
+jdbc.numHelperThreads=25
+jdbc.breakAfterAcquireFailure=true
+jdbc.debugUnreturnedConnectionStackTraces=true
+jdbc.testConnectionOnCheckin=true
+jdbc.testConnectionOnCheckout=true
+jdbc.unreturnedConnectionTimeout=120000
 
 ikube.dataSource=nonXaDataSourceH2
 ikube.persistenceUnit=IkubePersistenceUnitH2
