Updated the JavaDoc and updated some tests.
git-svn-id: http://ikube.googlecode.com/svn/trunk@530 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/client/spring.properties
+++ b/code/core/src/main/resources/META-INF/client/spring.properties
@@ -9,8 +9,8 @@ merge.factor=1000
 buffered.docs=1000
 max.field.length=1000
 max.read.length=10000000
-index.directory.path=D:/cluster/indexes
-index.directory.path.backup=D:/cluster/indexes/backup
+index.directory.path=./indexes
+index.directory.path.backup=./indexes/backup
 jdbc.batch.size=10000
 internet.batch.size=1000
 file.batch.size=1000
@@ -25,7 +25,7 @@ vectored=true
 # The Oracle datasource credentials
 oracle.jdbc.userid=XE
 oracle.jdbc.password=admin
-oracle.jdbc.url=jdbc:oracle:thin:@//ikube:1521/XE
+oracle.jdbc.url=jdbc:oracle:thin:@//ikube.dyndns.org:1521/XE
 oracle.jdbc.driver=oracle.jdbc.driver.OracleDriver
 
 # The number of threads for each indexing component/connector
