--- a/code/core/src/main/resources/META-INF/common/spring.properties
+++ b/code/core/src/main/resources/META-INF/common/spring.properties
@@ -25,7 +25,7 @@ h2.jdbc.driver=org.h2.Driver
 # The DB2 datasource credentials
 db2.jdbc.userid=db2admin
 db2.jdbc.password=db2admin
-db2.jdbc.url=jdbc:db2://ikube:50000/ikube
+db2.jdbc.url=jdbc:db2://ikube.dyndns.org:50000/ikube
 db2.jdbc.driver=com.ibm.db2.jcc.DB2Driver
 
 #General JDBC settings
