--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -86,6 +86,7 @@
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>maven-jetty-plugin</artifactId>
 				<!-- <version>7.4.4.v20110707</version> -->
+				<version>6.1.25</version>
 				<configuration>
 					<stopKey>stop</stopKey>
 					<stopPort>9090</stopPort>
