Added support for Docx. Updated the search controller and pages.
git-svn-id: http://ikube.googlecode.com/svn/trunk@536 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/pom.xml
+++ b/code/core/pom.xml
@@ -97,7 +97,163 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-install-plugin</artifactId>
+				<version>2.3</version>
+				<executions>
+					<execution>
+						<id>install-db2-driver</id>
+						<goals>
+							<goal>install-file</goal>
+						</goals>
+						<phase>validate</phase>
+						<configuration>
+							<groupId>com.ibm.db2.jcc</groupId>
+							<artifactId>db2jcc4</artifactId>
+							<version>9.7.2</version>
+							<packaging>jar</packaging>
+							<file>libs/drivers/db2jcc4-9.7.2.jar</file>
+							<generatePom>true</generatePom>
+						</configuration>
+					</execution>
+					<execution>
+						<id>install-db2-driver-license</id>
+						<goals>
+							<goal>install-file</goal>
+						</goals>
+						<phase>validate</phase>
+						<configuration>
+							<groupId>com.ibm.db2.jcc_license_cu</groupId>
+							<artifactId>db2jcc_license_cu</artifactId>
+							<version>9.7.2</version>
+							<packaging>jar</packaging>
+							<file>libs/drivers/db2jcc_license_cu-9.7.2.jar</file>
+							<generatePom>true</generatePom>
+						</configuration>
+					</execution>
+					<execution>
+						<id>install-oracle-driver</id>
+						<goals>
+							<goal>install-file</goal>
+						</goals>
+						<phase>validate</phase>
+						<configuration>
+							<groupId>oracle.ojdbc6</groupId>
+							<artifactId>ojdbc6</artifactId>
+							<version>11</version>
+							<packaging>jar</packaging>
+							<file>libs/drivers/ojdbc6-11.jar</file>
+							<generatePom>true</generatePom>
+						</configuration>
+					</execution>
+					<execution>
+						<id>install-jep</id>
+						<goals>
+							<goal>install-file</goal>
+						</goals>
+						<phase>validate</phase>
+						<configuration>
+							<groupId>org.nfunk</groupId>
+							<artifactId>jep</artifactId>
+							<version>2.4.1</version>
+							<packaging>jar</packaging>
+							<file>libs/tools/jep-2.4.1.jar</file>
+							<generatePom>true</generatePom>
+						</configuration>
+					</execution>
+					<execution>
+						<id>install-aspose-cells</id>
+						<goals>
+							<goal>install-file</goal>
+						</goals>
+						<phase>validate</phase>
+						<configuration>
+							<groupId>aspose</groupId>
+							<artifactId>aspose.cells</artifactId>
+							<version>7.0.0</version>
+							<packaging>jar</packaging>
+							<file>libs/aspose/aspose-cells-7.0.0.jar</file>
+							<generatePom>true</generatePom>
+						</configuration>
+					</execution>
+					<execution>
+						<id>install-aspose-pdf</id>
+						<goals>
+							<goal>install-file</goal>
+						</goals>
+						<phase>validate</phase>
+						<configuration>
+							<groupId>aspose</groupId>
+							<artifactId>aspose.pdf</artifactId>
+							<version>2.9.0</version>
+							<packaging>jar</packaging>
+							<file>libs/aspose/aspose-pdf-2.9.0-jdk16.jar</file>
+							<generatePom>true</generatePom>
+						</configuration>
+					</execution>
+					<execution>
+						<id>install-aspose-slides</id>
+						<goals>
+							<goal>install-file</goal>
+						</goals>
+						<phase>validate</phase>
+						<configuration>
+							<groupId>aspose</groupId>
+							<artifactId>aspose.slides</artifactId>
+							<version>2.6.0</version>
+							<packaging>jar</packaging>
+							<file>libs/aspose/aspose.slides-2.6.0.jar</file>
+							<generatePom>true</generatePom>
+						</configuration>
+					</execution>
+					<execution>
+						<id>install-aspose-words</id>
+						<goals>
+							<goal>install-file</goal>
+						</goals>
+						<phase>validate</phase>
+						<configuration>
+							<groupId>aspose</groupId>
+							<artifactId>aspose.words</artifactId>
+							<version>7.0.0</version>
+							<packaging>jar</packaging>
+							<file>libs/aspose/aspose.words.jdk16-7.0.0.jar</file>
+							<generatePom>true</generatePom>
+						</configuration>
+					</execution>
+					<execution>
+						<id>install-canyon</id>
+						<goals>
+							<goal>install-file</goal>
+						</goals>
+						<phase>validate</phase>
+						<configuration>
+							<groupId>canyon</groupId>
+							<artifactId>canyon</artifactId>
+							<version>0.9.8</version>
+							<packaging>jar</packaging>
+							<file>libs/tools/canyon-0.9.8.jar</file>
+							<generatePom>true</generatePom>
+						</configuration>
+					</execution>
+					<execution>
+						<id>install-jai-codec</id>
+						<goals>
+							<goal>install-file</goal>
+						</goals>
+						<phase>validate</phase>
+						<configuration>
+							<groupId>jai</groupId>
+							<artifactId>jai.codec</artifactId>
+							<version>1.1.3</version>
+							<packaging>jar</packaging>
+							<file>libs/tools/jai_codec-1.1.3-alpha.jar</file>
+							<generatePom>true</generatePom>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
-	
 </project>
