--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<artifactId>ikube</artifactId>
 	<packaging>pom</packaging>
 	<version>2.0.0</version>
-	
+
 	<properties>
 		<targetJdk>1.6</targetJdk>
 
@@ -64,11 +64,6 @@
 						<verbose />
 					</compilerArguments>
 				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-install-plugin</artifactId>
-				<version>2.3</version>
 			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
@@ -515,13 +510,6 @@
 			<type>jar</type>
 			<scope>runtime</scope>
 		</dependency>
-		<!-- <dependency>
-			<groupId>net.sf.ehcache</groupId>
-			<artifactId>ehcache-openjpa</artifactId>
-			<version>0.2.0</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency> -->
 		<dependency>
 			<groupId>com.beoui</groupId>
 			<artifactId>geocell</artifactId>
@@ -531,7 +519,7 @@
 		<dependency>
 			<groupId>org.nfunk</groupId>
 			<artifactId>jep</artifactId>
-			<version>2.4.0</version>
+			<version>2.4.1</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
@@ -591,6 +579,55 @@
 			<groupId>net.sf.ehcache</groupId>
 			<artifactId>ehcache-core</artifactId>
 			<version>2.4.2</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>aspose</groupId>
+			<artifactId>aspose.words</artifactId>
+			<version>7.0.0</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>aspose</groupId>
+			<artifactId>aspose.slides</artifactId>
+			<version>2.6.0</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>aspose</groupId>
+			<artifactId>aspose.cells</artifactId>
+			<version>7.0.0</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>aspose</groupId>
+			<artifactId>aspose.pdf</artifactId>
+			<version>2.9.0</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>jai</groupId>
+			<artifactId>jai.codec</artifactId>
+			<version>1.1.3</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.codehaus.woodstox</groupId>
+			<artifactId>stax2-api</artifactId>
+			<version>3.0.2</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.codehaus.woodstox</groupId>
+			<artifactId>woodstox-core-asl</artifactId>
+			<version>4.0.8</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
@@ -716,7 +753,7 @@
 						ConfusedInheritance,
 						ConfusionBetweenInheritedAndOuterMethod,
 						CrossSiteScripting,
-						DoInsideDoPrivileged, 
+						DoInsideDoPrivileged,
 						DontCatchIllegalMonitorStateException,
 						DontIgnoreResultOfPutIfAbsent,
 						DontUseEnum,
@@ -724,7 +761,7 @@
 						DumbMethodInvocations,
 						DumbMethods,
 						DuplicateBranches,
-						EmptyZipFileEntry,	 
+						EmptyZipFileEntry,
 						EqStringTest,
 						EqualsOperandShouldHaveClassCompatibleWithThis,
 						FieldItemSummary,
