--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -11,19 +11,18 @@
 	<groupId>ikube</groupId>
 	<artifactId>ikube-war</artifactId>
 	<packaging>war</packaging>
-	<version>2.0.0</version>
+	<version>${parent.version}</version>
 
+	<properties>
+		<jetty.version>6.1.11</jetty.version>
+	</properties>
+	
 	<parent>
 		<groupId>ikube</groupId>
 		<artifactId>ikube</artifactId>
-		<version>2.0.0</version>
+		<version>2.1.0</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
-
-	<properties>
-		<!-- 6.1.11, 7.4.4.v20110707 -->
-		<jetty.version>6.1.11</jetty.version>
-	</properties>
 
 	<build>
 		<finalName>${project.groupId}</finalName>
@@ -162,6 +161,26 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>com.googlecode.maven-gcu-plugin</groupId>
+				<artifactId>maven-gcu-plugin</artifactId>
+				<version>1.0</version>
+				<configuration>
+					<serverId>googlecode</serverId> <!-- default: googlecode -->
+					<failsOnError>true</failsOnError> <!-- default: false -->
+					<projectName>ikube</projectName> <!-- default: ${project.artifactId} -->
+					<uploads>
+						<upload>
+							<file>${project.build.directory}/${project.artifactId}-${project.version}.${project.packaging}</file>
+							<summary>${project.name} release ${project.version}</summary>
+							<labels>
+								<label>Featured</label>
+								<label>Type-Archive</label>
+							</labels>
+						</upload>
+					</uploads>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -169,7 +188,7 @@
 		<dependency>
 			<groupId>ikube</groupId>
 			<artifactId>ikube-core</artifactId>
-			<version>2.0.0</version>
+			<version>${project.version}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
