--- a/code/core/pom.xml
+++ b/code/core/pom.xml
@@ -8,7 +8,7 @@
 	<groupId>ikube</groupId>
 	<artifactId>ikube-core</artifactId>
 	<packaging>jar</packaging>
-	<version>${parent.version}</version>
+	<version>2.1.0</version>
 
 	<properties>
 		<main.class>ikube.Ikube</main.class>
