--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>ikube</groupId>
 	<artifactId>ikube-war</artifactId>
 	<packaging>war</packaging>
-	<version>${parent.version}</version>
+	<version>2.1.0</version>
 
 	<properties>
 		<jetty.version>6.1.11</jetty.version>
